# short_url

./: .gitignore  Dockerfile  Dockerfile.dev  README.md  alembic.ini  compose.dev.yaml  db.sqlite3  main.py  pyproject.toml  requirements.dev.txt  requirements.txt  test_main.py
alembic/: env.py
alembic/versions/: 03456b6faa00_firts.py  30137ed53ed8_refactor_database.py  3465ad702fad_delete_table_tokens.py  5ba91d0b9bea_first.py  6cbf964cf44a_inital_migration.py  74d861444a23_delete_column_last_name_user_table.py  8176005e4410_add_last_name_user_table.py  85c472701d47_create_user_table.py  8c67a0a0b71c_second.py  aae0b34c4ab6_add_optional_the_foregin_key_at_start.py  bc8a0d6793a8_add_table_refresh_token.py  d5b8f45c5346_agreado_de_titulo_a_tabla_code.py  e68bfc13ee8f_first.py  fd39d2e503ce_refactor_database.py
app/: dependencies.py  main.py  models.py
app/config/: data_base_config.py
app/controllers/: auth_controller.py  user_controller.py  (+2 more)
auth/: auth_dtos.py  auth_routes.py  auth_schema.py  auth_services.py
config/: data_base_config.py
core/: shorten_router.py
database/: database_dependency.py  models.py
free_shorten/: free_router.py  free_routes.py  free_services.py
premium_shorten/: premium_routes.py  premium_schemas.py  premium_services.py
redirects/: redirects_routes.py  redirects_services.py
share_dependencies/: database_dependency.py
shorten/: shorten_routes.py  shorten_schemas.py  shorten_services.py
src/: dependencies.py  main.py
tests/: test_main.py
user/: user_routes.py  user_services.py
utils/: generate_hash.py  jwt_encoders.py
(+30 files in other folders)
